# AX25Lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  debug_server.py  pyproject.toml
.github/workflows/: build.yml
AX25Console/: CMakeLists.txt  config.ini
AX25Console/src/: Utill.cpp  Utill.h  main.cpp  socket.cpp  socket.hpp
AX25Lib/: CMakeLists.txt
AX25Lib/src/: AX25Config.hpp  AX25Decoder.hpp  AX25FrameBuilder.cpp  AX25FrameBuilder.hpp  AX25Util.hpp  Direwolf.cpp  Direwolf.h
AX25Lib/src/protocall/: AX25Decoder.cpp  AX25Decoder.hpp  AX25FrameBuilder.cpp  AX25FrameBuilder.hpp  AX25Util.cpp  AX25Util.hpp
AX25Python/: AX25Python.pyi  CMakeLists.txt
AX25Python/src/: bindings.cpp
